--- a/assignment-3/assignment-3.Rmd
+++ b/assignment-3/assignment-3.Rmd
@@ -17,16 +17,16 @@ Unfortunately, Homicides remain a large issue at hand in large cities all over t
 
 ## Methods
 
-My analysis started with obtaining and cleaning spatial data for both LA and NYC. The crime data comes from [Los Angeles Open Data Portal](https://data.lacity.org/Public-Safety/Crime-Data-from-2010-to-2019/63jg-8b9z) and [New York Open Data Portal](https://data.cityofnewyork.us/Public-Safety/NYC-crime/qb7u-rbmr/data). The tract data of Los Angeles comes from [City of Los Angeles Hub](https://geohub.lacity.org/search?collection=Dataset&q=Census%20Tracts) and the tract data of New York comes from [NYC Open Data](https://data.cityofnewyork.us/City-Government/2010-Census-Tracts/fxpq-c8ku). In the lab, all crime data is taken from 2015. Once preprocessed, a point-in-polygon (PIP) operation was employed, spatially joining the locations of individual homicide incidents with their corresponding tracts. Challenges encountered included missing data and differing coordinate reference systems (CRS) between the datasets. 
+My analysis started with obtaining and cleaning spatial data for both LA and NYC. The crime data comes from [Los Angeles Open Data Portal](https://data.lacity.org/Public-Safety/Crime-Data-from-2010-to-2019/63jg-8b9z) and [New York Open Data Portal](https://data.cityofnewyork.us/Public-Safety/NYC-crime/qb7u-rbmr/data). The tract data of Los Angeles comes from [City of Los Angeles Hub](https://geohub.lacity.org/search?collection=Dataset&q=Census%20Tracts) and the tract data of New York comes from [NYC Open Data](https://data.cityofnewyork.us/City-Government/2010-Census-Tracts/fxpq-c8ku). In the lab, all crime data is taken from 2015. Once pre processed, a point-in-polygon (PIP) operation was employed, spatially joining the locations of individual homicide incidents with their corresponding tracts. Challenges encountered included missing data and differing coordinate reference systems (CRS) between the data sets. 
 
 
 ## Data Standardization
 
-Before the spatial analysis could take place, it was necessary to ensure that the datasets were clean and standardized. Firstly, the datasets for NY and LA were filtered to only include homicides from the year 2015. For Los Angeles, it was to filter out "CRIMINAL HOMICIDE" from the dataset. While for New York, it was to filter out both "HOMICIDE-NEGLIGENT-VEHICLE" and "MURDER & NON-NEGL. MANSLAUGHTER", since their both considered homicides. Next, I handled any rows with missing or invalid (NA) latitude and longitude values and removed them. This is to ensure that all remaining data points can be mapped accurately. Then, I subset all the relevant columns including the unique crime identifier and the coordinates to use for analysis. Finally, I ensured that the latitude and longitude values were converted to numeric. Non-numeric coordinates can cause errors in mapping and spatial analysis.
+Before the spatial analysis could take place, it was necessary to ensure that the data sets were clean and standardized. Firstly, the data sets for NY and LA were filtered to only include homicides from the year 2015. For Los Angeles, it was to filter out "CRIMINAL HOMICIDE" from the data set. While for New York, it was to filter out both "HOMICIDE-NEGLIGENT-VEHICLE" and "MURDER & NON-NEGL. MANSLAUGHTER", since their both considered homicides. Next, I handled any rows with missing or invalid (NA) latitude and longitude values and removed them. This is to ensure that all remaining data points can be mapped accurately. Then, I subset all the relevant columns including the unique crime identifier and the coordinates to use for analysis. Finally, I ensured that the latitude and longitude values were converted to numeric. Non-numeric coordinates can cause errors in mapping and spatial analysis.
 
 ## Spatial Data Operations
 
-The operation used here for spatial data analysis is the point-in-polygon (PIP) method. The PIP method identifies which tracts (polygons) each homicide (point) belongs to. This allows for aggregation of crimes at tract level, effectively associating each tract with a count of homicides. Firstly, the datasets were converted from tabular (CSV) form to spatial point datasets. Then, to make sure that the points and polygons align properly, I transformed both datasets to the same CRS (4326). Then, perform the PIP operation by using spatial join, linking each point to the polygon area it resides. Next, aggregate each homicides by each tract to show the number of homocides within each tract were tallied. Finally, merge all data to showcase a visualization or map.
+The operation used here for spatial data analysis is the point-in-polygon (PIP) method. The PIP method identifies which tracts (polygons) each homicide (point) belongs to. This allows for aggregation of crimes at tract level, effectively associating each tract with a count of homicides. Firstly, the data sets were converted from tabular (CSV) form to spatial point data sets. Then, to make sure that the points and polygons align properly, I transformed both data sets to the same CRS (4326). Then, perform the PIP operation by using spatial join, linking each point to the polygon area it resides. Next, aggregate each homicides by each tract to show the number of homicides within each tract were tallied. Finally, merge all data to showcase a visualization or map.
 
 
 
@@ -41,7 +41,9 @@ library(tidyverse)
 
 
 
-## Los Angeles Maps
+## Maps
+
+### Los Angeles
 
 
 ```{r load-data, include=FALSE}
@@ -108,7 +110,7 @@ LAtracts <- st_read("LA-data/LAC_Shape.shp")
 
 ```
 
-### Los Angeles Homicides per Tract
+#### Los Angeles Homicide per Tract
 
 ```{r points-polygons, include=TRUE, warning=FALSE, echo=FALSE, message=FALSE}
 tmap_mode("plot")
@@ -119,19 +121,19 @@ LAptspolygons <- tm_shape(LAtracts) + tm_borders(alpha = 0.4) +
   tm_shape(LAcrime.pts) + tm_dots(size = 0.1, col="red") +
   
   ## add title
-  tm_layout(title="Los Angeles Points and Polygons", 
-            title.size = 0.65, 
+  tm_layout(title="Los Angeles Homicide per Tract", 
+            title.size = 0.75, 
             title.position=c("left", "bottom"), 
             title.fontface = "bold") +
   
   # add scalebar
   tm_scale_bar(breaks = c(0, 5, 10),  
-               text.size = 0.8,
-               width = 1,             # Adjusts the width of bar segments
+               text.size = 0.65,
+               width = 1,             
                position = c("left", "bottom"),
-               lwd = 1.5,             # Adjust line width for visibility
-               color.dark = "red",   # Change dark color
-               color.light = "lightcoral")  # Change light color
+               lwd = 1.5,            
+               color.dark = "red",   
+               color.light = "lightcoral")  
 
 LAptspolygons
 ```
@@ -170,7 +172,7 @@ glimpse(LAtracts_new)
 
 
 
-### Visualize LA Homicides in 2015
+#### Los Angeles number of Homicides per Tract
 
 ```{r visualize-output, include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
 tmap_mode("view")
@@ -178,7 +180,7 @@ tm_shape(LAtracts_new) + tm_fill("CrimeCt", n=4, pal = "BuPu", title="LA Homicid
 ```
 
 
-## New York City
+### New York City
 
 
 
@@ -237,29 +239,28 @@ NYtracts <- st_read("NYC-data/NYC_Shape.shp")
 
 ```
 
-### New York City Homicides per Tract
+#### New York City Homicide per Tract
 ```{r points-polygonsNY, include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
 tmap_mode("plot")
 NYptspolygons <- tm_shape(NYtracts) + tm_borders(alpha = 0.4) + 
   
   ## 2nd layer (overlay)
-  tm_shape(NYcrime.pts) + tm_dots(size = 0.1, col="blue") +
+  tm_shape(NYcrime.pts) + tm_dots(size = 0.1, col="blue", title="Homicides") +
   
   ## add title
-  tm_layout(title="New York City Points and Polygons", 
+  tm_layout(title="New York City Homicide per Tract", 
             title.size = 0.75, 
             title.position=c("left", "top"), 
             title.fontface = "bold") +
   
   # add scalebar
 tm_scale_bar(breaks = c(0, 5, 10),  
-             width = 1,           # Adjusts the width of bar segments
+             width = 1,           
              position = c("left", "top"),  
-             text.size = 0.8,
-             lwd = 1.5,            # Adjust line width for visibility
-             color.dark = "blue",   # Change dark color
-             color.light = "lightblue")  # Change light color
-
+             text.size = 0.65,
+             lwd = 1.5,            
+             color.dark = "blue",   
+             color.light = "lightblue")
 NYptspolygons
 ```
 
@@ -297,7 +298,7 @@ glimpse(NYtracts_new)
 ```
 
 
-### Visualize NYC Homicides in 2015
+#### New York City number of Homicides per Tract
 ```{r visualize-outputNY, include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
 tmap_mode("view")
 tm_shape(NYtracts_new) + tm_fill("CrimeCt", n=4, pal = "BuPu", title="NYC Homicides in 2015")
